removed white spaces between icons to fix a webkit bug

--- a/public/css/stream.less
+++ b/public/css/stream.less
@@ -161,7 +161,7 @@
 						line-height:15px;
 						cursor:pointer;
 						opacity:0;
-						margin: 0 0 0 2px;
+						margin: 0 0 0 5px;
 						/*#client-transition-time > .actions;*/
 						#client-transition-time > .short;
 						&:hover{
